<resources>
    <string name="app_name">DeviceInfo</string>
    <string name="loading">Loading…</string>
    <string name="get_network_info">刷新网络信息</string>
    <string name="get_location_info">获取定位信息</string>
    <string name="network_label">网络信息</string>
    <string name="location_label">位置信息</string>
    <string name="export_result">导出</string>
    <string name="key_name">Key Name</string>
    <string name="original_value">当前值</string>
    <string name="update_value">修改值</string>
    <string name="save_original">保存当前值</string>
    <string name="save_updated">保存修改值</string>
    <string name="load_updated">导入</string>
    <string name="clear_updated">清空</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_delete">删除</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="apply_updated">保存并应用修改</string>
    <string name="refresh">刷新</string>
    <string name="get_current_config">获取当前配置</string>
    <string name="open_map">打开地图</string>

    <string name="xposed_description">Display and change wifi and location info</string>
    <string name="wifi_notice">如果无法获取wifi信息，请确保定位已开启且已授予定位权限</string>

</resources>