<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 顶部按钮区 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btnSaveOriginal"
            style="@style/ButtonStyle"
            android:text="@string/save_original"/>

        <Button
            android:id="@+id/btnSaveModified"
            style="@style/ButtonStyle"
            android:text="@string/save_updated"/>

        <Button
            android:id="@+id/btnImport"
            style="@style/ButtonStyle"
            android:text="@string/load_updated"/>
    </LinearLayout>

    <!-- 表头 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            style="@style/TableHeader"
            android:text="@string/key_name" />

        <TextView
            style="@style/TableHeader"
            android:text="@string/original_value" />

        <TextView
            style="@style/TableHeader"
            android:text="@string/update_value" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>