<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:paddingTop="10dp">

            <TextView
                style="@style/TextLabel"
                android:text="@string/network_label" />

            <Button
                android:id="@+id/btn_get_network_info"
                style="@style/ButtonStyle"
                android:text="@string/get_network_info" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                style="@style/TextLabel"
                android:text="@string/location_label" />

            <Button
                android:id="@+id/btn_get_location_info"
                style="@style/ButtonStyle"
                android:text="@string/get_location_info" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="30dp">

            <TextView
                android:id="@+id/location_content"
                style="@style/TextContent"
                android:text="@string/loading" />

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_export_txt"
            style="@style/ButtonStyle"
            android:text="@string/export_result" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
